==> zjcszn/embedded-lib/1. Base Framework/1.8 BootLoader/OpenBLT/Target/Demo/ARMCM4_XMC4_XMC4700_Relax_Kit_IAR/Boot/hooks.c <==
#include "boot.h"                                /* bootloader generic header          */
#include "led.h"                                 /* LED driver header                  */
#include "xmc_gpio.h"                            /* GPIO module                        */
#include "xmc_uart.h"                            /* UART driver header                 */

blt_bool CpuUserProgramStartHook(void)
{
  /* additional and optional backdoor entry through BUTTON1 on the board. to
   * force the bootloader to stay active after reset, keep it pressed during reset.
   */
  if (XMC_GPIO_GetInput(P15_13) == 0)
  {
    /* pushbutton pressed, so do not start the user program and keep the
     * bootloader active instead.
     */
    return BLT_FALSE;
  }

  /* clean up the LED driver */
  LedBlinkExit();

  /*  okay to start the user program.*/
  return BLT_TRUE;
}

void FileFirmwareUpdateLogHook(blt_char *info_string)
{
  blt_int32u timeoutTime;

  /* write the string to the log file */
  if (logfile.canUse == BLT_TRUE)
  {
    if (f_puts(info_string, &logfile.handle) < 0)
    {
      logfile.canUse = BLT_FALSE;
      f_close(&logfile.handle);
    }
  }

  /* echo all characters in the string on UART */
  while(*info_string != '\0')
  {
    /* write byte to transmit holding register */
    XMC_UART_CH_Transmit(XMC_UART0_CH0, *info_string);
    /* set timeout time to wait for transmit completion. */
    timeoutTime = TimerGet() + 10;
    /* wait for tx holding register to be empty */
    while( (XMC_USIC_CH_TXFIFO_GetEvent(XMC_UART0_CH0) & XMC_USIC_CH_TXFIFO_EVENT_STANDARD) == 0)
    {
      /* keep the watchdog happy */
      CopService();
      /* break loop upon timeout. this would indicate a hardware failure. */
      if (TimerGet() > timeoutTime)
      {
        break;
      }
    }
    /* reset event */
    XMC_USIC_CH_TXFIFO_ClearEvent(XMC_UART0_CH0, XMC_USIC_CH_TXFIFO_EVENT_STANDARD);
    /* point to the next character in the string */
    info_string++;
  }
}
